# nextjs-fastapi-app

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json
apps/api/: .gitignore  Dockerfile  config.py  error_decorators.py  error_handlers.py  error_reporting.py  exceptions.py  main.py  pyproject.toml  pytest.ini
apps/api/infrastructure/: db.py  idempotency.py  internal_auth.py  mail_client.py  motherduck_client.py  ratelimit.py  redis_client.py  security.py  vector_client.py
apps/api/routers/: internal.py  search.py  webhooks.py
apps/api/schemas/: search.py  webhook.py
apps/api/services/: analytics_webhook_service.py  base_analytics_service.py  base_embedding_service.py  base_vector_service.py  dlt_pipeline_service.py  mail_service.py  maintenance_service.py  todo_embedding_service.py  todo_vector_service.py  todo_webhook_service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_analytics_webhooks.py  test_dlt_pipeline_webhook.py  test_vector_webhooks.py  test_webhooks.py
apps/api/tests/unit/: test_analytics_webhook_service.py  test_dlt_pipeline_service.py  test_exceptions.py  test_mail_service.py  test_search.py  test_security.py  test_todo_embedding_service.py  test_todo_vector_service.py  test_todo_webhook_service.py
apps/web/: .gitignore  Dockerfile  next.config.ts  package.json  playwright.config.mts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
apps/web/prisma/: schema.prisma
apps/worker/: Dockerfile  package.json  prisma  tsconfig.json
(+117 files in other folders)
