[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
description = "FastAPI backend"
dependencies = [
    "alembic>=1.18.4",
    "dlt[motherduck,postgres]>=1.25.0",
    "duckdb>=1.5.2",
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.1",
    "python-multipart>=0.0.22",
    "qstash>=3.4.0",
    "resend>=2.27.0",
    "sqlmodel>=0.0.37",
    "strawberry-graphql[fastapi]>=0.311.3",
    "upstash-ratelimit>=1.1.0",
    "upstash-redis>=1.7.0",
    "upstash-vector>=0.8.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6.0",
]
